--- a/src/KioskClient/Actions/Image.xaml
+++ b/src/KioskClient/Actions/Image.xaml
@@ -1,15 +1,14 @@
 ﻿<Page
-    x:Class="KioskClient.MainPage"
+    x:Class="KioskClient.Actions.Image"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskClient"
+    xmlns:local="using:KioskClient.Actions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    KeyUp="KioskLibrary.Common.CommonKeyUp">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" KeyUp="KioskLibrary.Common.CommonKeyUp">
 
     <Grid>
-
+        <Image x:Name="imgDisplay" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </Page>
