--- a/src/KioskClient/Actions/Website.xaml
+++ b/src/KioskClient/Actions/Website.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="KioskClient.MainPage"
+    x:Class="KioskClient.Actions.Website"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskClient"
+    xmlns:local="using:KioskClient.Actions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,6 +10,6 @@
     KeyUp="KioskLibrary.Common.CommonKeyUp">
 
     <Grid>
-
+        <WebView HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
     </Grid>
 </Page>
