--- a/src/KioskClient/Actions/SlideshowPage.xaml
+++ b/src/KioskClient/Actions/SlideshowPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="KioskClient.Actions.Image"
+    x:Class="KioskClient.Actions.SlideshowPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:KioskClient.Actions"
