Reworked icons to better support light/dark themes

--- a/src/KioskClient/Settings.xaml
+++ b/src/KioskClient/Settings.xaml
@@ -19,7 +19,7 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <Grid x:Name="mainGrid" Background="#FF267B30">
+    <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
