Implemented and manually tested entire lifecycle.

--- a/src/KioskClient/Pages/Actions/ImagePage.xaml
+++ b/src/KioskClient/Pages/Actions/ImagePage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="KioskClient.Pages.Actions.ImagePage"
+    x:Class="KioskLibrary.Pages.Actions.ImagePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskClient.Actions"
+    xmlns:local="using:KioskLibrary.Actions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
