--- a/src/KioskClient/App.xaml
+++ b/src/KioskClient/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="KioskClient.App"
+    x:Class="KioskLibrary.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskClient">
+    xmlns:local="using:KioskLibrary">
 
 </Application>
