--- a/src/KioskClient/MainPage.xaml
+++ b/src/KioskClient/MainPage.xaml
@@ -1,4 +1,12 @@
-﻿<Page
+﻿<!--
+  Copyright 2021
+  City of Stanton
+  Stanton, Kentucky
+  www.stantonky.gov
+  github.com/CityOfStanton
+-->
+
+<Page
     x:Class="KioskLibrary.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -27,6 +35,6 @@
         </Grid.RowDefinitions>
         <ContentControl Grid.Row="2" Grid.RowSpan="3" x:Name="ccLogo" Template="{StaticResource MainLogo}" HorizontalAlignment="Center"/>
         <TextBlock  Grid.Row="5" Text="Loading..." VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource SubheaderTextBlockStyle}" FontWeight="Bold" />
-        <Button x:Name="Button_Settings" Visibility="Collapsed" Grid.Row="6" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Settings" Click="Button_Settings_Click"/>
+        <Button x:Name="Button_Settings" Grid.Row="6" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Settings" Click="Button_Settings_Click"/>
     </Grid>
 </Page>
