--- a/src/KioskClient/Pages/Settings.xaml
+++ b/src/KioskClient/Pages/Settings.xaml
@@ -1,4 +1,12 @@
-﻿<Page
+﻿<!--
+  Copyright 2021
+  City of Stanton
+  Stanton, Kentucky
+  www.stantonky.gov
+  github.com/CityOfStanton
+-->
+
+<Page
     x:Class="KioskLibrary.Pages.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
