--- a/src/KioskClient/Resources/Base.xaml
+++ b/src/KioskClient/Resources/Base.xaml
@@ -1,4 +1,12 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<!--
+  Copyright 2021
+  City of Stanton
+  Stanton, Kentucky
+  www.stantonky.gov
+  github.com/CityOfStanton
+-->
+
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ControlTemplate x:Key="MainLogo">
