--- a/src/KioskClient/Pages/Settings.xaml
+++ b/src/KioskClient/Pages/Settings.xaml
@@ -98,11 +98,13 @@
 
         <Grid Grid.ColumnSpan="2" Margin="20" Grid.Column="0" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="Log:" TextWrapping="WrapWholeWords" VerticalAlignment="Top" TextTrimming="WordEllipsis" Style="{ThemeResource SubtitleTextBlockStyle}" HorizontalAlignment="Left" Margin="0,0,0,10" />
-            <ListBox x:Name="ListBox_Log" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <ProgressBar x:Name="ProgressBar_Loading" IsIndeterminate="True" Grid.Row="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="15px" Visibility="{x:Bind Path=State.IsLoading, Mode=OneWay}" />
+            <TextBlock Grid.Row="1" Text="Log:" TextWrapping="WrapWholeWords" VerticalAlignment="Top" TextTrimming="WordEllipsis" Style="{ThemeResource SubtitleTextBlockStyle}" HorizontalAlignment="Left" Margin="0,0,0,10" />
+            <ListBox x:Name="ListBox_Log" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
 
         <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0, 20" >
