Changed to ProgressRing to avoid resizing controls Added ProgressRing to MainPage Simplified MainPage Arguments Improved UI States on loading

--- a/src/KioskClient/MainPage.xaml
+++ b/src/KioskClient/MainPage.xaml
@@ -31,10 +31,12 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="25" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ContentControl Grid.Row="2" Grid.RowSpan="3" x:Name="ccLogo" Template="{StaticResource MainLogo}" HorizontalAlignment="Center"/>
         <TextBlock  Grid.Row="5" Text="Loading..." VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource SubheaderTextBlockStyle}" FontWeight="Bold" />
-        <Button x:Name="Button_Settings" Grid.Row="6" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Settings" Click="Button_Settings_Click"/>
+        <ProgressRing x:Name="ProgressRing_File_Loading" Grid.Row="6" IsActive="True" Grid.Column="0" VerticalAlignment="Center" Height="15px" Foreground="{Binding Foreground, ElementName=Button_Settings}" />
+        <Button x:Name="Button_Settings" Grid.Row="7" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Settings" Click="Button_Settings_Click"/>
     </Grid>
 </Page>
